--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,7 +30,9 @@ if(YCM_EP_DEVEL_MODE_idynutils)
                       DEPENDS   CartesianUtilsTest
                                 iDynUtilsTest
                                 interfacesTest
-                                testUtilsTest)
+                                RobotUtilsTest
+                                testUtilsTest
+                                YSCITest)
 endif()
 
 SET(TestLibs  ${GTEST_BOTH_LIBRARIES} ${iDynTree_LIBRARIES} idynutils 
@@ -55,6 +57,10 @@ ADD_EXECUTABLE(RobotUtilsTest    robot_utils_tests.cpp)
 TARGET_LINK_LIBRARIES(RobotUtilsTest ${TestLibs})
 add_dependencies(RobotUtilsTest GTest-ext idynutils)
 
+ADD_EXECUTABLE(YSCITest    yarp_single_chain_interface_tests.cpp)
+TARGET_LINK_LIBRARIES(YSCITest ${TestLibs})
+add_dependencies(YSCITest GTest-ext idynutils)
+
 ADD_EXECUTABLE(testUtilsTest     tests_utils_tests.cpp)
 TARGET_LINK_LIBRARIES(testUtilsTest ${TestLibs})
 add_dependencies(testUtilsTest GTest-ext idynutils)
@@ -63,3 +69,4 @@ add_test(NAME cartesian_utils_tests COMMAND CartesianUtilsTest)
 add_test(NAME idyn_utils_tests COMMAND iDynUtilsTest)
 add_test(NAME robot_utils_tests COMMAND RobotUtilsTest)
 add_test(NAME tests_utils_tests COMMAND testUtilsTest)
+add_test(NAME yarp_single_chain_interface_tests COMMAND YSCITest)
