New convex hull implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ file(GLOB_RECURSE idynutils_SCRIPTS "${CMAKE_CURRENT_SOURCE_DIR}/python" *.py)
 ADD_LIBRARY(idynutils SHARED    src/cartesian_utils.cpp
                                 src/ComanUtils.cpp
                                 src/convex_hull.cpp
+                                src/convex_hull2D.cpp
                                 src/idynutils.cpp
                                 src/RobotUtils.cpp
                                 src/tests_utils.cpp
