--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,6 +49,10 @@ ADD_EXECUTABLE(CartesianUtilsTest     cartesian_utils_tests.cpp)
 TARGET_LINK_LIBRARIES(CartesianUtilsTest ${TestLibs})
 add_dependencies(CartesianUtilsTest GTest-ext idynutils)
 
+ADD_EXECUTABLE(ConvexHullTest     convex_hull_tests.cpp)
+TARGET_LINK_LIBRARIES(ConvexHullTest ${TestLibs})
+add_dependencies(ConvexHullTest GTest-ext idynutils)
+
 ADD_EXECUTABLE(iDynUtilsTest    idyn_utils_tests.cpp)
 TARGET_LINK_LIBRARIES(iDynUtilsTest ${TestLibs})
 add_dependencies(iDynUtilsTest GTest-ext idynutils)
@@ -66,6 +70,7 @@ TARGET_LINK_LIBRARIES(testUtilsTest ${TestLibs})
 add_dependencies(testUtilsTest GTest-ext idynutils)
 
 add_test(NAME cartesian_utils_tests COMMAND CartesianUtilsTest)
+add_test(NAME convex_hull_tests COMMAND ConvexHullTest)
 add_test(NAME idyn_utils_tests COMMAND iDynUtilsTest)
 add_test(NAME robot_utils_tests COMMAND RobotUtilsTest)
 add_test(NAME tests_utils_tests COMMAND testUtilsTest)
