--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ file(GLOB_RECURSE idynutils_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include/idynut
 file(GLOB_RECURSE idynutils_SCRIPTS "${CMAKE_CURRENT_SOURCE_DIR}/python" *.py)
 
 ADD_LIBRARY(idynutils SHARED    src/cartesian_utils.cpp
+                                src/collision_utils.cpp
                                 src/ComanUtils.cpp
                                 src/convex_hull.cpp
                                 src/idynutils.cpp
