--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,4 +133,4 @@ add_subdirectory(examples)
 # Add Testing target  #
 #######################
 enable_testing()
-add_subdirectory(tests)
+#add_subdirectory(tests)
