Removed ICUB dependency

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,7 +16,6 @@ FIND_PACKAGE(rosconsole REQUIRED)
 FIND_PACKAGE(tf REQUIRED)
 FIND_PACKAGE(urdf REQUIRED)
 FIND_PACKAGE(YARP REQUIRED)
-FIND_PACKAGE(ICUB REQUIRED)
 
 # compite GTest
 find_package(GTest)
@@ -31,7 +30,7 @@ if (NOT GTEST_FOUND)
 endif()
 
 include_directories(${GTEST_INCLUDE_DIRS})
-link_directories(${GTEST_LIB_DIRS} ${ICUB_LIB_DIRS})
+link_directories(${GTEST_LIB_DIRS})
 
 # add local include
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} )
@@ -53,7 +52,7 @@ SET(TestLibs  ${GTEST_BOTH_LIBRARIES} ${iDynTree_LIBRARIES} idynutils
               ${kdl_parser_LIBRARIES}
               ${moveit_core_LIBRARIES}  ${orocos_kdl_LIBRARIES} 
               ${PCL_LIBRARIES} ${urdf_LIBRARIES} 
-              ${srdfdom_LIBRARIES} ${YARP_LIBRARIES} ${ICUB_LIBRARIES})
+              ${srdfdom_LIBRARIES} ${YARP_LIBRARIES})
 
 add_definitions(-DIDYNUTILS_TESTS_ROBOTS_DIR="${CMAKE_CURRENT_BINARY_DIR}/robots/")
 
