--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,10 +37,11 @@ FIND_PACKAGE(rosconsole REQUIRED)
 FIND_PACKAGE(kdl_parser REQUIRED)
 FIND_PACKAGE(moveit_core REQUIRED)
 FIND_PACKAGE(fcl REQUIRED)
-FIND_PACKAGE(PCL 1.7 REQUIRED COMPONENTS    #common
+FIND_PACKAGE(PCL 1.7 REQUIRED COMPONENTS    common
                                             filters
                                             surface
-                                            search)
+                                            search
+					    io)
 
 #if (CMAKE_BUILD_TYPE STREQUAL "Debug")
 #    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wmissing-field-initializers -W -Wunused -Wuninitialized -Wformat=2 -Wctor-dtor-privacy -Wnon-virtual-dtor -Wwrite-strings -Wno-char-subscripts -Wreturn-type -Wcast-qual -Wcast-align -Wsign-promo -Woverloaded-virtual -fno-strict-aliasing  -Werror=address -Werror=parentheses " )
