idynutils supports kinetic on xenial

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,8 +47,39 @@ FIND_PACKAGE(PCL 1.7 REQUIRED COMPONENTS    common
 #    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wmissing-field-initializers -W -Wunused -Wuninitialized -Wformat=2 -Wctor-dtor-privacy -Wnon-virtual-dtor -Wwrite-strings -Wno-char-subscripts -Wreturn-type -Wcast-qual -Wcast-align -Wsign-promo -Woverloaded-virtual -fno-strict-aliasing  -Werror=address -Werror=parentheses " )
 #endif(CMAKE_BUILD_TYPE STREQUAL "Debug")
 
+
+# Detect Linux Distribution 
+if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+     if(EXISTS "/etc/lsb-release")
+         execute_process(COMMAND cat /etc/lsb-release
+                         COMMAND grep DISTRIB_CODENAME
+                         COMMAND awk -F= "{ print $2 }"
+                         COMMAND tr "\n" " "
+                         COMMAND sed "s/ //"
+                         OUTPUT_VARIABLE UBUNTU_VERSION
+                         RESULT_VARIABLE UBUNTU_VERSION_RESULT
+         )
+     endif(EXISTS "/etc/lsb-release")
+     
+     message(STATUS "Configuring idynutils to be built on Ubuntu ${UBUNTU_VERSION}")
+endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+
+if(${UBUNTU_VERSION} MATCHES "xenial")
+     message(STATUS "Adding CXX support")
+    include(CheckCXXCompilerFlag)
+    check_cxx_compiler_flag("-std=c++11" COMPILER_SUPPORTS_CXX11)
+    check_cxx_compiler_flag("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
+    if(COMPILER_SUPPORTS_CXX11)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    elseif(COMPILER_SUPPORTS_CXX0X)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+    else()
+        message(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
+    endif()
+endif(${UBUNTU_VERSION} MATCHES "xenial")
+
 INCLUDE_DIRECTORIES(include ${YARP_INCLUDE_DIRS} ${iDynTree_INCLUDE_DIRS}
-                            ${PCL_INCLUDE_DIRS})
+                            ${PCL_INCLUDE_DIRS} ${moveit_core_INCLUDE_DIRS} )
 
 # for every file in idynutils_INCLUDES CMake already sets the property HEADER_FILE_ONLY
 file(GLOB_RECURSE idynutils_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include/idynutils" *.h*)
@@ -68,10 +99,13 @@ ADD_LIBRARY(idynutils SHARED    src/cartesian_utils.cpp
                                 src/yarp_single_chain_interface.cpp
                                 ${idynutils_INCLUDES})
 
-TARGET_LINK_LIBRARIES(idynutils PRIVATE ${iDynTree_LIBRARIES}
-                                        ${kdl_parser_LIBRARIES} ${moveit_core_LIBRARIES} 
-                                        ${orocos_kdl_LIBRARIES} ${srdfdom_LIBRARIES} 
-                                        ${urdf_LIBRARIES} ${YARP_LIBRARIES}
+TARGET_LINK_LIBRARIES(idynutils PRIVATE ${moveit_core_LIBRARIES} 
+                                        ${orocos_kdl_LIBRARIES}
+                                        ${urdf_LIBRARIES}
+                                        ${srdfdom_LIBRARIES} 
+                                        ${kdl_parser_LIBRARIES}
+                                        ${iDynTree_LIBRARIES}
+                                        ${YARP_LIBRARIES}
                                         ${PCL_LIBRARIES})
 
 ########################################################################
