--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,10 @@
+# Enable C++ support
 language: cpp
+# Compiler selection
+compiler:
+  - gcc
+# Build steps
+script:
+  - mkdir build
+  - cd build
+  - cmake .. && make 
