--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: cpp
 # Compiler selection
 compiler:
   - gcc
+# Ubuntu 14.04 Trusty support
+sudo: required
+dist: trusty
 # Build steps
 script:
   - mkdir build
