--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ compiler:
 # Ubuntu 14.04 Trusty support
 sudo: required
 dist: trusty
+# Dependencies
+install:
+    - go get github.com/robotology/yarp
 # Build steps
 script:
   - mkdir build
