--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ compiler:
 sudo: required
 dist: trusty
 # Dependencies
-install:
-    - go get github.com/robotology/yarp
+before_script: 
+  - sudo sh -c 'echo "deb http://www.icub.org/ubuntu trusty contrib/science" > /etc/apt/sources.list.d/icub.list'
+  - sudo apt-get update
+  - sudo apt-get install yarp
 # Build steps
 script:
   - mkdir build
