--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ dist: trusty
 before_script: 
   - sudo sh -c 'echo "deb http://www.icub.org/ubuntu trusty contrib/science" > /etc/apt/sources.list.d/icub.list'
   - sudo apt-get update
-  - sudo apt-get install yarp
+  - sudo apt-get --yes --force-yes install yarp
 # Build steps
 script:
   - mkdir build
