--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(Boost REQUIRED COMPONENTS system filesystem)
 FIND_PACKAGE(catkin REQUIRED)
 FIND_PACKAGE(Eigen3 REQUIRED)
 FIND_PACKAGE(fcl REQUIRED)
+FIND_PACKAGE(octomap REQUIRED)
 FIND_PACKAGE(geometric_shapes REQUIRED)
 FIND_PACKAGE(iDynTree REQUIRED)
 FIND_PACKAGE(kdl_parser REQUIRED)
@@ -109,7 +110,7 @@ TARGET_LINK_LIBRARIES(iDynUtilsTest ${TestLibs} ${rosbag_LIBRARIES})
 add_dependencies(iDynUtilsTest GTest-ext idynutils)
 
 ADD_EXECUTABLE(RobotUtilsTest    robot_utils_tests.cpp)
-TARGET_LINK_LIBRARIES(RobotUtilsTest ${TestLibs})
+TARGET_LINK_LIBRARIES(RobotUtilsTest ${TestLibs} ${octomap_LIBRARIES})
 add_dependencies(RobotUtilsTest GTest-ext idynutils)
 
 ADD_EXECUTABLE(YSCITest    yarp_single_chain_interface_tests.cpp)
